--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "child_process": "^1.0.2",
     "crypto-js": "^4.1.1",
     "fs": "0.0.1-security",
+    "jimp": "^0.16.1",
     "fs-extra": "^11.1.1",
     "node-fetch": "^2.6.4",
     "nodemon": "^3.0.1",
